--- a/midway/package.json
+++ b/midway/package.json
@@ -14,6 +14,7 @@
     "@midwayjs/koa": "^3.0.0",
     "@midwayjs/logger": "^2.14.0",
     "@midwayjs/orm": "^3.3.6",
+    "@midwayjs/swagger": "^3.3.14",
     "@midwayjs/validate": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.8",
@@ -29,6 +30,7 @@
     "cross-env": "^6.0.0",
     "jest": "^26.4.0",
     "mwts": "^1.0.5",
+    "swagger-ui-dist": "^4.12.0",
     "ts-jest": "^26.2.0",
     "tsconfig-paths": "^4.0.0",
     "typescript": "~4.6.0"
